--- a/productos.html
+++ b/productos.html
@@ -14,7 +14,7 @@
         <div class="nav-container">
             <div class="logo">
                 <a href="index.html">
-                    <img src="logo.png" alt="Crokelet Logo" class="logo-img">
+                    <img src="https://via.placeholder.com/200x80?text=Crokelet" alt="Crokelet Logo" class="logo-img">
                 </a>
             </div>
             <nav class="main-nav">
@@ -42,7 +42,7 @@
 
     <main class="container">
         <!-- Banner de productos -->
-        <section class="productos-hero">
+        <section class="productos-hero" style="background-image: url('https://images.unsplash.com/photo-1548767797-d8c844163c4c?w=1200')">
             <h1>Nuestros Productos</h1>
             <p>Nutrición de calidad para el bienestar de tu mascota</p>
         </section>
@@ -83,11 +83,11 @@
         <!-- Grid de Productos -->
         <section class="productos-section">
             <div class="productos-grid">
-                <!-- Producto Card -->
+                <!-- Producto 1 - Premium Adulto -->
                 <div class="producto-card" data-categoria="perros">
                     <div class="producto-imagen">
                         <span class="etiqueta-nuevo">Nuevo</span>
-                        <img src="images/productos/premium-adulto.jpg" alt="Crokelet Premium">
+                        <img src="https://images.unsplash.com/photo-1568640347023-a616a30bc3bd?w=500" alt="Crokelet Premium Adulto">
                         <div class="producto-acciones">
                             <button class="btn-favorito"><i class="far fa-heart"></i></button>
                             <button class="btn-comparar"><i class="fas fa-exchange-alt"></i></button>
@@ -117,7 +117,172 @@
                         </button>
                     </div>
                 </div>
-                <!-- Repetir estructura para otros productos -->
+
+                <!-- Producto 2 - Cachorro -->
+                <div class="producto-card" data-categoria="perros">
+                    <div class="producto-imagen">
+                        <img src="https://images.unsplash.com/photo-1601758228041-f3b2795255f1?w=500" alt="Crokelet Cachorro">
+                        <div class="producto-acciones">
+                            <button class="btn-favorito"><i class="far fa-heart"></i></button>
+                            <button class="btn-comparar"><i class="fas fa-exchange-alt"></i></button>
+                        </div>
+                    </div>
+                    <div class="producto-info">
+                        <div class="producto-categoria">Cachorros</div>
+                        <h3>Crokelet Cachorro</h3>
+                        <div class="producto-rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <span>(32 reseñas)</span>
+                        </div>
+                        <p>Nutrición especial para el crecimiento</p>
+                        <div class="producto-detalles">
+                            <div class="producto-peso">10 kg</div>
+                            <div class="precio">
+                                <span class="precio-actual">$649.99</span>
+                            </div>
+                        </div>
+                        <button class="btn-comprar">
+                            <i class="fas fa-shopping-cart"></i> Agregar al carrito
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Producto 3 - Gatos -->
+                <div class="producto-card" data-categoria="gatos">
+                    <div class="producto-imagen">
+                        <img src="https://images.unsplash.com/photo-1589924691995-400dc9ecc119?w=500" alt="Crokelet Gatos">
+                        <div class="producto-acciones">
+                            <button class="btn-favorito"><i class="far fa-heart"></i></button>
+                            <button class="btn-comparar"><i class="fas fa-exchange-alt"></i></button>
+                        </div>
+                    </div>
+                    <div class="producto-info">
+                        <div class="producto-categoria">Gatos</div>
+                        <h3>Crokelet Gatos</h3>
+                        <div class="producto-rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                            <span>(18 reseñas)</span>
+                        </div>
+                        <p>Control de bolas de pelo</p>
+                        <div class="producto-detalles">
+                            <div class="producto-peso">7.5 kg</div>
+                            <div class="precio">
+                                <span class="precio-actual">$549.99</span>
+                            </div>
+                        </div>
+                        <button class="btn-comprar">
+                            <i class="fas fa-shopping-cart"></i> Agregar al carrito
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Producto 4 - Snacks -->
+                <div class="producto-card" data-categoria="snacks">
+                    <div class="producto-imagen">
+                        <span class="etiqueta-nuevo">Nuevo</span>
+                        <img src="https://images.unsplash.com/photo-1582798358481-d199fb7347bb?w=500" alt="Snacks Dentales">
+                        <div class="producto-acciones">
+                            <button class="btn-favorito"><i class="far fa-heart"></i></button>
+                            <button class="btn-comparar"><i class="fas fa-exchange-alt"></i></button>
+                        </div>
+                    </div>
+                    <div class="producto-info">
+                        <div class="producto-categoria">Snacks</div>
+                        <h3>Snacks Dentales</h3>
+                        <div class="producto-rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <span>(45 reseñas)</span>
+                        </div>
+                        <p>Higiene dental y diversión</p>
+                        <div class="producto-detalles">
+                            <div class="producto-peso">500 g</div>
+                            <div class="precio">
+                                <span class="precio-actual">$199.99</span>
+                            </div>
+                        </div>
+                        <button class="btn-comprar">
+                            <i class="fas fa-shopping-cart"></i> Agregar al carrito
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Producto 5 - Senior -->
+                <div class="producto-card" data-categoria="perros">
+                    <div class="producto-imagen">
+                        <img src="https://images.unsplash.com/photo-1541599540903-216a46ca1dc0?w=500" alt="Crokelet Senior">
+                        <div class="producto-acciones">
+                            <button class="btn-favorito"><i class="far fa-heart"></i></button>
+                            <button class="btn-comparar"><i class="fas fa-exchange-alt"></i></button>
+                        </div>
+                    </div>
+                    <div class="producto-info">
+                        <div class="producto-categoria">Perros Senior</div>
+                        <h3>Crokelet Senior</h3>
+                        <div class="producto-rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                            <span>(15 reseñas)</span>
+                        </div>
+                        <p>Fórmula especial para perros mayores</p>
+                        <div class="producto-detalles">
+                            <div class="producto-peso">12 kg</div>
+                            <div class="precio">
+                                <span class="precio-actual">$629.99</span>
+                            </div>
+                        </div>
+                        <button class="btn-comprar">
+                            <i class="fas fa-shopping-cart"></i> Agregar al carrito
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Producto 6 - Gatos Indoor -->
+                <div class="producto-card" data-categoria="gatos">
+                    <div class="producto-imagen">
+                        <img src="https://images.unsplash.com/photo-1519052537078-e6302a4968d4?w=500" alt="Crokelet Indoor">
+                        <div class="producto-acciones">
+                            <button class="btn-favorito"><i class="far fa-heart"></i></button>
+                            <button class="btn-comparar"><i class="fas fa-exchange-alt"></i></button>
+                        </div>
+                    </div>
+                    <div class="producto-info">
+                        <div class="producto-categoria">Gatos Indoor</div>
+                        <h3>Crokelet Indoor</h3>
+                        <div class="producto-rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <span>(28 reseñas)</span>
+                        </div>
+                        <p>Especial para gatos de interior</p>
+                        <div class="producto-detalles">
+                            <div class="producto-peso">7.5 kg</div>
+                            <div class="precio">
+                                <span class="precio-actual">$579.99</span>
+                            </div>
+                        </div>
+                        <button class="btn-comprar">
+                            <i class="fas fa-shopping-cart"></i> Agregar al carrito
+                        </button>
+                    </div>
+                </div>
             </div>
 
             <!-- Paginación -->
@@ -198,6 +363,14 @@
             btn.addEventListener('click', function() {
                 const cartCount = document.querySelector('.cart-count');
                 cartCount.textContent = parseInt(cartCount.textContent) + 1;
+            });
+        });
+
+        // Favoritos
+        document.querySelectorAll('.btn-favorito').forEach(btn => {
+            btn.addEventListener('click', function() {
+                this.querySelector('i').classList.toggle('fas');
+                this.querySelector('i').classList.toggle('far');
             });
         });
     </script>
